force-app/main/default/objects/EncryptionKey__c/EncryptionKey__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>This custom setting value will be used in Encryption Key</description>
    <label>EncryptionKey</label>
</CustomObject>