force-app/main/default/objects/EncryptionKey__c/fields/IV__c.field-meta.xml
<CustomField>
    <fullName>IV__c</fullName>
    <label>IV</label>
    <length>100</length>
    <type>Text</type>
</CustomField>