force-app/main/default/objects/EncryptionKey__c/fields/OptinURLPlaceholder__c.field-meta.xml
<CustomField>
    <fullName>OptinURLPlaceholder__c</fullName>
    <label>OptinURLPlaceholder</label>
    <length>255</length>
    <type>Text</type>
</CustomField>