force-app/main/default/objects/EncryptionKey__c/fields/OptoutURLPlaceholder__c.field-meta.xml
<CustomField>
    <fullName>OptoutURLPlaceholder__c</fullName>
    <label>OptoutURLPlaceholder</label>
    <length>255</length>
    <type>Text</type>
</CustomField>